# artifice

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml
ci/: script.sh
src/: config.rs  jira.rs  lib.rs  main.rs
src/commands/: mod.rs  start.rs
